review comments
Example file (OptionalParamNameExample.java)
- Remove groupId from maven-compiler-plugin (default group)
- Remove @see link to GitHub issue (may become stale)
- Convert <pre>{@code} to {@snippet} for Java 21+
- Fix all indentation to align with opening parenthesis
- Use String.formatted() instead of String.format()
- Change version from 4.0 to 5.0

API annotations (6 files)
- Change 'deployment-time exception' to 'exception during initialization'
- Remove second year from copyright headers (keep only 2010)